made some progress on alignment issues

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -11,6 +11,7 @@ body {
 #content1{
 	margin: 20px auto;
   width: 800px;
+  height: 350px;
   padding: 0px 20px 20px 20px;
 	margin-bottom: 10px;
 	margin-top: 15%;
@@ -26,7 +27,10 @@ body {
 }
 
 #content{
-	width: 20%;
+	margin: 20px auto;
+  width: 800px;
+  height: 550px;
+  padding: 0px 20px 20px 20px;
 	margin-bottom: 10px;
 	margin-top: 5%;
 	background-color: #46ADCC;
@@ -69,12 +73,30 @@ body {
 
 #side1 {
 	float: left;
-	width: 500px;
+	width: 380px;
+	font-size: 20px;
+
 }
 
 #side2 {
 	float: left;
-	width: 250px;
+	width: 320px;
+	font-size: 20px;
+}
+
+
+#footer {
+  /*position: fixed;*/
+  text-align: right;
+  z-index: 1;
+  width: 98.5%;
+  height: 40px;
+  background-color: #FFFFFF;
+ 	border: 3px solid #000;
+  background: -webkit-linear-gradient(#46ADCC, #ddd);
+	background: -o-linear-gradient(#46ADCC, #ddd);
+	background: -moz-linear-gradient(#46ADCC, #ddd);
+	background: linear-gradient(#46ADCC, #ddd);
 }
 
 
@@ -83,7 +105,4 @@ body {
 
 
 
-
-
-
- /*'http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light|Indie+Flower' */*/
+ /*'http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light|Indie+Flower' */
